--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
       # Discover and run unit tests. For more information, see <https://docs.djangoproject.com/en/2.0/topics/testing/overview/>
       - python manage.py test
 
-      - aws cloudformation package --template template.yml --s3-bucket $S3_BUCKET --output-template-file template-export.yml
+#      - aws cloudformation package --template template.yml --s3-bucket $S3_BUCKET --output-template-file template-export.yml
 
   post_build:
     commands:
@@ -21,5 +21,5 @@ phases:
 artifacts:
   type: zip
   files:
-    - template-export.yml
-    - template-configuration.json
+#    - template-export.yml
+#    - template-configuration.json
