--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,5 +21,7 @@ phases:
 artifacts:
 ##  type: zip
   files:
+    - '**/*'
+    name: myname-$(AWS_REGION)
 #    - template-export.yml
 #    - template-configuration.json
