--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,8 +19,7 @@ phases:
     # Update the AWS Partition, AWS Region, account ID and project ID in the project ARN on template-configuration.json file so AWS CloudFormation can tag project resources.
 #      - sed -i.bak 's/\$PARTITION\$/'${PARTITION}'/g;s/\$AWS_REGION\$/'${AWS_REGION}'/g;s/\$ACCOUNT_ID\$/'${ACCOUNT_ID}'/g;s/\$PROJECT_ID\$/'${PROJECT_ID}'/g' template-configuration.json
 artifacts:
-  type: zip
   files:
-    - '/sample2/SourceArti/O7s9SOw'
+    - target/messageUtil-1.0.jar
 #    - template-export.yml
 #    - template-configuration.json
